--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>3DLabs - Contact</title>
+  <title>3DLabs – Contact</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -15,32 +15,22 @@
         <span class="brand-subtitle">Contact</span>
       </div>
     </div>
+
     <div class="top-bar-right top-nav">
-      <a class="nav-link" href="index.html">Home</a>
-      <a class="nav-link" href="shop.html">Shop</a>
-      <a class="nav-link" href="gallery.html">Gallery</a>
-      <a class="nav-link" href="social.html">Social</a>
-      <a class="nav-link nav-active" href="contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="tools/filament-wizard.html">Filament Wizard</a>
+      <a class="nav-link" href="/index.html">Home</a>
+      <a class="nav-link" href="/shop.html">Shop</a>
+      <a class="nav-link" href="/gallery.html">Gallery</a>
+      <a class="nav-link" href="/social.html">Social</a>
+      <a class="nav-link nav-active" href="/contact.html">Contact</a>
+      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
     </div>
   </header>
 
   <main class="page">
-    <section class="hero-card">
-      <div class="hero-eyebrow">CONTACT</div>
-      <h1>Request a quote</h1>
-      <p class="hero-subtitle">
-        Send dimensions, material preferences, and your use case. We’ll reply with a recommendation and pricing.
-      </p>
-      <div class="hero-actions">
-        <a class="btn btn-primary" href="mailto:3dlabs.cm@gmail.com">Email 3dlabs.cm@gmail.com</a>
-        <a class="btn btn-ghost" href="tools/filament-wizard.html">Use Filament Wizard first</a>
-      </div>
+    <section class="panel wide">
+      <h1>Contact</h1>
+      <p>Send dimensions, material preferences, and your use case.</p>
     </section>
   </main>
-
-  <footer class="footer">
-    <div>3DLabs • Contact</div>
-  </footer>
 </body>
 </html>
