--- a/gallery.html
+++ b/gallery.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>3DLabs - Gallery</title>
+  <title>3DLabs – Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -15,30 +15,22 @@
         <span class="brand-subtitle">Gallery</span>
       </div>
     </div>
+
     <div class="top-bar-right top-nav">
-      <a class="nav-link" href="index.html">Home</a>
-      <a class="nav-link" href="shop.html">Shop</a>
-      <a class="nav-link nav-active" href="gallery.html">Gallery</a>
-      <a class="nav-link" href="social.html">Social</a>
-      <a class="nav-link" href="contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="tools/filament-wizard.html">Filament Wizard</a>
+      <a class="nav-link" href="/index.html">Home</a>
+      <a class="nav-link" href="/shop.html">Shop</a>
+      <a class="nav-link nav-active" href="/gallery.html">Gallery</a>
+      <a class="nav-link" href="/social.html">Social</a>
+      <a class="nav-link" href="/contact.html">Contact</a>
+      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
     </div>
   </header>
 
   <main class="page">
-    <section class="hero-card">
-      <div class="hero-eyebrow">GALLERY</div>
-      <h1>Print examples</h1>
-      <p class="hero-subtitle">Showcase coming soon. In the meantime, reach out with what you want to print.</p>
-      <div class="hero-actions">
-        <a class="btn btn-primary" href="contact.html">Request a quote</a>
-        <a class="btn btn-ghost" href="tools/filament-wizard.html">Open Filament Wizard</a>
-      </div>
+    <section class="panel wide">
+      <h1>Gallery</h1>
+      <p>Real prints, finishes, and examples to set expectations.</p>
     </section>
   </main>
-
-  <footer class="footer">
-    <div>3DLabs • Gallery</div>
-  </footer>
 </body>
 </html>
