--- a/tools/filament-wizard.html
+++ b/tools/filament-wizard.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>3DLabs - Filament Wizard</title>
+  <title>3DLabs – Filament Wizard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- IMPORTANT: this page lives in /tools, so go up one level for site CSS -->
-  <link rel="stylesheet" href="../styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -18,37 +17,25 @@
     </div>
 
     <div class="top-bar-right top-nav">
-      <!-- IMPORTANT: from /tools, go up one level for the main pages -->
-      <a class="nav-link" href="../index.html">Home</a>
-      <a class="nav-link" href="../shop.html">Shop</a>
-      <a class="nav-link" href="../gallery.html">Gallery</a>
-      <a class="nav-link" href="../social.html">Social</a>
-      <a class="nav-link" href="../contact.html">Contact</a>
-      <a class="nav-link nav-active nav-cta" href="filament-wizard.html">Filament Wizard</a>
+      <a class="nav-link" href="/index.html">Home</a>
+      <a class="nav-link" href="/shop.html">Shop</a>
+      <a class="nav-link" href="/gallery.html">Gallery</a>
+      <a class="nav-link" href="/social.html">Social</a>
+      <a class="nav-link" href="/contact.html">Contact</a>
+      <a class="nav-link nav-active nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
     </div>
   </header>
 
   <main class="page">
-    <section class="hero-card">
-      <div class="hero-eyebrow">FILAMENT WIZARD</div>
+    <section class="panel wide">
       <h1>Filament Wizard</h1>
-      <p class="hero-subtitle">
-        Use-case driven filament recommendations (strength, heat, UV, flexibility, etc.).
-      </p>
-    </section>
-
-    <section class="card">
+      <p>Use-case driven filament recommendations (strength, heat, UV, flexibility, etc.).</p>
       <div id="app"></div>
     </section>
   </main>
 
-  <footer class="footer">
-    <div>3DLabs • Filament Wizard</div>
-  </footer>
-
-  <!-- These files are in the SAME folder as this HTML, so keep them relative -->
-  <script src="filaments.js"></script>
-  <script src="logic.js"></script>
-  <script src="wiring.js"></script>
+  <script src="/tools/filaments.js"></script>
+  <script src="/tools/logic.js"></script>
+  <script src="/tools/wiring.js"></script>
 </body>
 </html>
