--- a/tools/filament-wizard.html
+++ b/tools/filament-wizard.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>3DLabs – Filament Wizard</title>
+  <title>3DLabs - Filament Wizard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles.css" />
 </head>
+
 <body>
   <header class="top-bar">
     <div class="top-bar-left">
@@ -27,13 +28,305 @@
   </header>
 
   <main class="page">
-    <section class="panel wide">
+    <section class="hero-card">
+      <div class="hero-eyebrow">FILAMENT WIZARD</div>
       <h1>Filament Wizard</h1>
-      <p>Use-case driven filament recommendations (strength, heat, UV, flexibility, etc.).</p>
-      <div id="app"></div>
+      <p class="hero-subtitle">
+        Use-case driven filament recommendations (strength, heat, UV, flexibility, etc.).
+      </p>
+    </section>
+
+    <!-- MAIN APP -->
+    <section id="mainApp" class="card">
+      <div class="wizard-shell">
+        <!-- LEFT: Inputs -->
+        <div class="wizard-left">
+          <div class="wizard-title">Your part</div>
+
+          <div class="field">
+            <label for="partType">Part type</label>
+            <select id="partType">
+              <option value="decorative">Decorative</option>
+              <option value="mechanical">Mechanical</option>
+              <option value="flexible">Flexible</option>
+              <option value="lightweight">Lightweight</option>
+              <option value="high_heat">High heat</option>
+              <option value="outdoor">Outdoor</option>
+              <option value="chemical">Chemical exposure</option>
+              <option value="experimental">Experimental / special effect</option>
+              <option value="support">Support material</option>
+            </select>
+          </div>
+
+          <div class="field">
+            <label for="strength">Strength requirement</label>
+            <select id="strength">
+              <option value="low">Low</option>
+              <option value="medium">Medium</option>
+              <option value="high">High</option>
+              <option value="max">Max</option>
+            </select>
+          </div>
+
+          <div class="field">
+            <label for="flexibility">Flexibility</label>
+            <select id="flexibility">
+              <option value="rigid">Rigid</option>
+              <option value="semi">Semi-flex</option>
+              <option value="flexible">Flexible</option>
+            </select>
+          </div>
+
+          <div class="field">
+            <label for="temp">Max temperature</label>
+            <select id="temp">
+              <option value="room">Room temp</option>
+              <option value="60">≤ 60°C</option>
+              <option value="80">60–80°C</option>
+              <option value="100">80–100°C</option>
+              <option value="120">&gt; 100°C</option>
+            </select>
+          </div>
+
+          <div class="field">
+            <label for="environment">Environment</label>
+            <select id="environment">
+              <option value="indoor">Indoor</option>
+              <option value="outdoor">Outdoor / UV</option>
+              <option value="humid">Humid / splashes</option>
+              <option value="chemical">Chemical exposure</option>
+            </select>
+          </div>
+
+          <div class="field">
+            <label for="difficulty">Print difficulty</label>
+            <select id="difficulty">
+              <option value="any">Any (best match)</option>
+              <option value="easy">Easy only</option>
+              <option value="medium">Medium</option>
+              <option value="hard">Hard</option>
+              <option value="extreme">Industrial</option>
+            </select>
+          </div>
+
+          <div class="field">
+            <label for="special">Special feature (optional)</label>
+            <select id="special">
+              <option value="">None</option>
+              <option value="low_warp">Low warp</option>
+              <option value="impact">Impact resistant</option>
+              <option value="uv">UV resistance</option>
+              <option value="chemical">Chemical resistant</option>
+              <option value="food_safe">Food-contact (verify!)</option>
+              <option value="glow">Glow</option>
+              <option value="carbon_fiber">Carbon fiber</option>
+              <option value="glass_fiber">Glass fiber</option>
+              <option value="support">Support</option>
+            </select>
+          </div>
+
+          <div class="field">
+            <label for="notes">Notes (optional)</label>
+            <textarea id="notes" rows="3" placeholder="Printer, part constraints, finish, budget, etc."></textarea>
+          </div>
+
+          <div class="button-row">
+            <button id="runBtn" class="btn-primary">Find filaments</button>
+            <button id="resetBtn" class="btn-ghost">Reset</button>
+          </div>
+
+          <div class="button-row">
+            <button id="openLibraryBtn" class="btn-ghost">View all filaments</button>
+          </div>
+
+          <div class="button-row">
+            <button id="openCalculatorBtn" class="btn-ghost">Pricing calculator</button>
+            <button id="feedbackBtn" class="btn-ghost">Feedback</button>
+          </div>
+
+          <div class="view-mode">
+            <div class="view-label">View</div>
+            <div class="chip-row">
+              <button id="viewTop3" class="chip chip-active">Top 3</button>
+              <button id="viewAll" class="chip">All matches</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- RIGHT: Results -->
+        <div class="wizard-right">
+          <div class="results-header">
+            <div class="results-header-left">
+              <div id="resultsTitle" class="results-title">Recommendations</div>
+              <div id="subtitle" class="results-subtitle">
+                Up to 3 best-matching materials will appear here, with pros/cons and a quick print profile.
+              </div>
+              <div id="resultsModeLine" class="results-mode-line"></div>
+            </div>
+
+            <div class="results-header-right">
+              <div class="sort-wrap">
+                <label class="sort-label" for="sortBy">Sort</label>
+                <select id="sortBy" class="sort-select">
+                  <option value="score">Best match</option>
+                  <option value="price_asc">Price (low → high)</option>
+                  <option value="price_desc">Price (high → low)</option>
+                  <option value="tox_asc">Toxicity (low → high)</option>
+                  <option value="tox_desc">Toxicity (high → low)</option>
+                </select>
+              </div>
+
+              <div class="filters-wrap">
+                <button id="filtersBtn" class="btn-ghost filters-btn">
+                  <span id="filtersBtnLabel">Filters</span>
+                </button>
+
+                <div id="filtersDropdown" class="filters-dropdown">
+                  <div class="filters-title">Filters</div>
+
+                  <label class="checkbox-row">
+                    <input id="filterHideHard" type="checkbox" />
+                    <span>Hide hard/extreme materials</span>
+                  </label>
+
+                  <div class="radio-block">
+                    <div class="radio-title">Printer</div>
+                    <label class="radio-row">
+                      <input type="radio" name="printerFilter" value="any" checked />
+                      <span>Any printer</span>
+                    </label>
+                    <label class="radio-row">
+                      <input type="radio" name="printerFilter" value="open_only" />
+                      <span>Open-frame only</span>
+                    </label>
+                    <label class="radio-row">
+                      <input type="radio" name="printerFilter" value="enclosed_only" />
+                      <span>Enclosed recommended</span>
+                    </label>
+                  </div>
+
+                  <div class="filters-actions">
+                    <button id="clearFiltersBtn" class="btn-ghost">Clear filters</button>
+                  </div>
+                </div>
+              </div>
+
+              <div id="resultsCount" class="results-count">0 filament options</div>
+            </div>
+          </div>
+
+          <div id="resultsQuickHints" class="results-hints"></div>
+
+          <div id="results" class="results-grid">
+            <div class="result-empty">
+              No results yet.<br /><br />
+              Tell the wizard about your part and click <b>Find filaments</b> to see recommendations.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CALCULATOR SCREEN -->
+    <section id="calculatorScreen" class="card hidden">
+      <div class="calc-header">
+        <div>
+          <div class="calc-title">Pricing calculator</div>
+          <div class="calc-subtitle">Estimate base cost + markup for a print.</div>
+        </div>
+        <div class="calc-header-actions">
+          <button id="calcOpenLibraryBtn" class="btn-ghost">View all filaments</button>
+          <button id="calculatorBackBtn" class="btn-ghost">Back to wizard</button>
+        </div>
+      </div>
+
+      <div class="calc-grid">
+        <div class="calc-panel">
+          <div class="calc-panel-title">Inputs</div>
+
+          <div class="calc-field">
+            <label for="calcFilamentGrams">Filament used (g)</label>
+            <input id="calcFilamentGrams" type="number" step="0.1" />
+          </div>
+
+          <div class="calc-field">
+            <label for="calcSpoolGrams">Spool size (g)</label>
+            <input id="calcSpoolGrams" type="number" step="1" placeholder="1000" />
+          </div>
+
+          <div class="calc-field">
+            <label for="calcSpoolCost">Spool cost ($)</label>
+            <input id="calcSpoolCost" type="number" step="0.01" />
+          </div>
+
+          <div class="calc-field">
+            <label for="calcPowerCostPerHour">Power cost per hour ($)</label>
+            <input id="calcPowerCostPerHour" type="number" step="0.01" placeholder="optional" />
+          </div>
+
+          <div class="calc-field two-col">
+            <div>
+              <label for="calcPrintHours">Print time (hours)</label>
+              <input id="calcPrintHours" type="number" step="1" />
+            </div>
+            <div>
+              <label for="calcPrintMinutes">Print time (minutes)</label>
+              <input id="calcPrintMinutes" type="number" step="1" />
+            </div>
+          </div>
+
+          <div class="calc-field">
+            <label for="calcLaborRate">Labour rate ($/hr)</label>
+            <input id="calcLaborRate" type="number" step="0.01" placeholder="optional" />
+          </div>
+
+          <div class="calc-field two-col">
+            <div>
+              <label for="calcLaborHours">Labour (hours)</label>
+              <input id="calcLaborHours" type="number" step="1" />
+            </div>
+            <div>
+              <label for="calcLaborMinutes">Labour (minutes)</label>
+              <input id="calcLaborMinutes" type="number" step="1" />
+            </div>
+          </div>
+
+          <div class="calc-field">
+            <label for="calcOtherCosts">Other costs ($)</label>
+            <input id="calcOtherCosts" type="number" step="0.01" placeholder="shipping, packaging, etc." />
+          </div>
+
+          <div class="calc-field">
+            <label>Markup: <span id="markupValueLabel">0%</span></label>
+            <input id="markupSlider" type="range" min="0" max="500" value="0" />
+          </div>
+
+          <div class="button-row">
+            <button id="calcRunBtn" class="btn-primary">Calculate</button>
+            <button id="calcResetBtn" class="btn-ghost">Reset</button>
+          </div>
+        </div>
+
+        <div class="calc-panel">
+          <div class="calc-panel-title">Summary</div>
+          <div id="calcSummary" class="calc-summary">
+            Enter values above and hit <b>Calculate</b>.
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
+  <footer class="footer">
+    <div>3DLabs • Filament Wizard</div>
+  </footer>
+
+  <!-- Toast (used by showToast()) -->
+  <div id="toast" class="toast">
+    <div id="toastText" class="toast-text"></div>
+  </div>
+
+  <!-- JS (absolute paths so it works from anywhere) -->
   <script src="/tools/filaments.js"></script>
   <script src="/tools/logic.js"></script>
   <script src="/tools/wiring.js"></script>
