--- a/gallery.html
+++ b/gallery.html
@@ -28,9 +28,71 @@
 
   <main class="page">
     <section class="panel wide">
-      <h1>Gallery</h1>
-      <p>Real prints, finishes, and examples to set expectations.</p>
+      <div class="section-title">
+        <h2>Gallery</h2>
+        <p class="hint">Show real prints, finishes, and quality standards.</p>
+      </div>
+      <p>
+        Drop your images into these tiles later. The layout is designed to look intentional even before content is filled.
+      </p>
+    </section>
+
+    <section class="panel">
+      <div class="gallery-grid">
+        <article class="gallery-tile">
+          <div class="gallery-image"></div>
+          <div class="gallery-body">
+            <h3>Matte PETG – Functional</h3>
+            <p>Clean edges, durable finish, great for mounts and brackets.</p>
+          </div>
+        </article>
+
+        <article class="gallery-tile">
+          <div class="gallery-image"></div>
+          <div class="gallery-body">
+            <h3>PLA – Showcase</h3>
+            <p>Best surface quality for display pieces and prototypes.</p>
+          </div>
+        </article>
+
+        <article class="gallery-tile">
+          <div class="gallery-image"></div>
+          <div class="gallery-body">
+            <h3>TPU – Flexible</h3>
+            <p>Grommets, bumpers, grips, vibration isolation.</p>
+          </div>
+        </article>
+
+        <article class="gallery-tile">
+          <div class="gallery-image"></div>
+          <div class="gallery-body">
+            <h3>ASA – Outdoor</h3>
+            <p>UV resistance for parts that live outside.</p>
+          </div>
+        </article>
+
+        <article class="gallery-tile">
+          <div class="gallery-image"></div>
+          <div class="gallery-body">
+            <h3>CF Blend – Stiff</h3>
+            <p>High stiffness parts with a premium look (abrasive filament).</p>
+          </div>
+        </article>
+
+        <article class="gallery-tile">
+          <div class="gallery-image"></div>
+          <div class="gallery-body">
+            <h3>High Detail</h3>
+            <p>Small parts, tight tolerances, fine layer work.</p>
+          </div>
+        </article>
+      </div>
     </section>
   </main>
+
+  <footer class="footer">
+    <div>3DLabs • Gallery</div>
+    <div>If you want, I can add a simple image folder convention and auto-load thumbnails with vanilla JS.</div>
+  </footer>
 </body>
 </html>
