--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
         <div class="hero-eyebrow">3DLabs</div>
         <h1>3D printing done properly.</h1>
         <p>
-          Custom prints, functional parts, and in-house tools like Filament Wizard for smarter material selection.
+          Clean prints. Functional parts. No guesswork.
+          Browse ready-to-order items, or use Filament Wizard to choose the right material for the job.
         </p>
+
         <div class="hero-actions">
-          <a class="btn btn-primary" href="/shop.html">Browse the shop</a>
-          <a class="btn" href="/gallery.html">View gallery</a>
-          <a class="btn" href="/tools/filament-wizard.html">Open Filament Wizard</a>
+          <a class="btn-primary" href="/shop.html">Shop featured</a>
+          <a class="btn" href="/gallery.html">See real prints</a>
+          <a class="btn-ghost" href="/tools/filament-wizard.html">Open Filament Wizard</a>
         </div>
       </div>
     </section>
@@ -45,7 +47,7 @@
     <section class="grid-3">
       <article class="panel">
         <h3>Shop</h3>
-        <p>Featured products, Etsy listings, and popular print categories.</p>
+        <p>Featured products, categories, and quick-order items.</p>
         <a class="btn btn-small" href="/shop.html">Open shop</a>
       </article>
 
@@ -57,23 +59,29 @@
 
       <article class="panel">
         <h3>Tools</h3>
-        <p>Filament Wizard + calculators, guides, and print-prep tools.</p>
+        <p>Use-case driven material picks + pricing calculator inside Filament Wizard.</p>
         <a class="btn btn-small" href="/tools/filament-wizard.html">Open tools</a>
       </article>
     </section>
 
     <section class="panel wide">
-      <h3>Need a quote or custom part?</h3>
-      <p>Send dimensions, material preferences, and use case—then we’ll recommend the right filament and pricing.</p>
-      <a class="btn btn-primary btn-small" href="/contact.html">Request a quote</a>
-    </section>
-
-    <footer class="footer">
-      <div>3DLabs • Site v1 • Dec 2025</div>
-      <div class="footer-note">
-        Tools and pricing are estimates. Final material and process selection depends on part requirements and printer capability.
+      <div class="section-title">
+        <h2>Need a quote?</h2>
+        <p class="hint">Fast turnaround when you include dimensions and material requirements.</p>
       </div>
-    </footer>
+      <p>
+        Send what it needs to survive (heat, UV, load, impact) and we’ll recommend filament + process.
+      </p>
+      <div class="hero-actions">
+        <a class="btn-primary" href="/contact.html">Request a quote</a>
+        <a class="btn-ghost" href="/tools/filament-wizard.html">Pick filament first</a>
+      </div>
+    </section>
   </main>
+
+  <footer class="footer">
+    <div>3DLabs • Site v2 • Dec 2025</div>
+    <div>Estimates only. Final material and process selection depends on part requirements and printer capability.</div>
+  </footer>
 </body>
 </html>
