--- a/social.html
+++ b/social.html
@@ -28,9 +28,50 @@
 
   <main class="page">
     <section class="panel wide">
-      <h1>Social</h1>
-      <p>Links to social profiles and updates.</p>
+      <div class="section-title">
+        <h2>Social</h2>
+        <p class="hint">Short-form prints, timelapses, and behind-the-scenes.</p>
+      </div>
+      <p>
+        Replace these with your real handles/links. The layout is meant to feel like a modern brand hub.
+      </p>
+    </section>
+
+    <section class="grid-3">
+      <article class="panel">
+        <h3>Instagram</h3>
+        <p>Gallery highlights, new drops, clean product shots.</p>
+        <a class="btn btn-small" href="#">Add your link</a>
+      </article>
+
+      <article class="panel">
+        <h3>TikTok</h3>
+        <p>Timelapses, failures, wins, and quick print tips.</p>
+        <a class="btn btn-small" href="#">Add your link</a>
+      </article>
+
+      <article class="panel">
+        <h3>YouTube</h3>
+        <p>Build logs, material testing, shop content.</p>
+        <a class="btn btn-small" href="#">Add your link</a>
+      </article>
+    </section>
+
+    <section class="panel wide">
+      <div class="section-title">
+        <h2>Want your prints featured?</h2>
+        <p class="hint">Send photos + the filament used.</p>
+      </div>
+      <div class="hero-actions">
+        <a class="btn-primary" href="/contact.html">Message 3DLabs</a>
+        <a class="btn-ghost" href="/gallery.html">See gallery</a>
+      </div>
     </section>
   </main>
+
+  <footer class="footer">
+    <div>3DLabs • Social</div>
+    <div>When you give me your handles, I’ll wire these buttons and add icon badges.</div>
+  </footer>
 </body>
 </html>
