--- a/tools/filament-wizard.html
+++ b/tools/filament-wizard.html
@@ -9,6 +9,7 @@
 
 <body>
   <header class="top-bar">
+  <div class="top-bar-inner">
     <div class="top-bar-left">
       <div class="logo-circle">3D</div>
       <div class="brand-text">
@@ -25,7 +26,8 @@
       <a class="nav-link" href="/contact.html">Contact</a>
       <a class="nav-link nav-active nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
     </div>
-  </header>
+  </div>
+</header>
 
   <main class="page">
     <section class="hero-card">
@@ -327,8 +329,9 @@
   </div>
 
   <!-- JS (absolute paths so it works from anywhere) -->
-  <script src="/tools/filaments.js"></script>
-  <script src="/tools/logic.js"></script>
-  <script src="/tools/wiring.js"></script>
+  <script src="/filaments.js"></script>
+  <script src="/logic.js"></script>
+  <script src="/wiring.js"></script>
+
 </body>
 </html>
