--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header class="top-bar">
+  <div class="top-bar-inner">
     <div class="top-bar-left">
       <div class="logo-circle">3D</div>
       <div class="brand-text">
@@ -24,7 +25,8 @@
       <a class="nav-link" href="/contact.html">Contact</a>
       <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
     </div>
-  </header>
+  </div>
+</header>
 
   <main class="page">
     <section class="panel wide">
