--- a/tools/filament-wizard.html
+++ b/tools/filament-wizard.html
@@ -32,16 +32,21 @@
   <main class="page tool-page">
     <section class="hero-card tool-hero">
       <div class="hero-eyebrow">FILAMENT WIZARD</div>
-      <h1>Filament Wizard</h1>
-      <p class="hero-subtitle">
-        Use-case driven filament recommendations (strength, heat, UV, flexibility, etc.).
-      </p>
+      <div class="hero-row">
+        <div>
+          <h1>Filament Wizard</h1>
+          <p class="hero-subtitle">Use-case driven filament recommendations (strength, heat, UV, flexibility, etc.).</p>
+        </div>
+
+        <!-- If this stays “JS: loading…”, your scripts are not running -->
+        <div id="jsStatus" class="js-status js-status-warn">JS: loading…</div>
+      </div>
     </section>
 
     <!-- MAIN APP -->
     <section id="mainApp" class="card tool-card">
       <div class="wizard-shell wizard-shell-xl">
-        <!-- LEFT: Inputs -->
+        <!-- LEFT -->
         <div class="wizard-left">
           <div class="wizard-title">Your part</div>
 
@@ -155,7 +160,7 @@
           </div>
         </div>
 
-        <!-- RIGHT: Results -->
+        <!-- RIGHT -->
         <div class="wizard-right">
           <div class="results-header results-header-sticky">
             <div class="results-header-left">
@@ -167,48 +172,50 @@
             </div>
 
             <div class="results-header-right">
-              <div class="sort-wrap">
-                <label class="sort-label" for="sortBy">Sort</label>
-                <select id="sortBy" class="sort-select">
-                  <option value="score">Best match</option>
-                  <option value="price_asc">Price (low → high)</option>
-                  <option value="price_desc">Price (high → low)</option>
-                  <option value="tox_asc">Toxicity (low → high)</option>
-                  <option value="tox_desc">Toxicity (high → low)</option>
-                </select>
-              </div>
+              <div class="actions-row">
+                <div class="sort-wrap">
+                  <label class="sort-label" for="sortBy">Sort</label>
+                  <select id="sortBy" class="btn-like-select" aria-label="Sort">
+                    <option value="score">Best match</option>
+                    <option value="price_asc">Price (low → high)</option>
+                    <option value="price_desc">Price (high → low)</option>
+                    <option value="tox_asc">Toxicity (low → high)</option>
+                    <option value="tox_desc">Toxicity (high → low)</option>
+                  </select>
+                </div>
 
-              <div class="filters-wrap">
-                <button id="filtersBtn" class="btn-ghost filters-btn" type="button">
-                  <span id="filtersBtnLabel">Filters</span>
-                </button>
+                <div class="filters-wrap">
+                  <button id="filtersBtn" class="btn-ghost btn-compact" type="button">
+                    <span id="filtersBtnLabel">Filters</span>
+                  </button>
 
-                <div id="filtersDropdown" class="filters-dropdown">
-                  <div class="filters-title">Filters</div>
+                  <div id="filtersDropdown" class="filters-dropdown">
+                    <div class="filters-title">Filters</div>
 
-                  <label class="checkbox-row">
-                    <input id="filterHideHard" type="checkbox" />
-                    <span>Hide hard/extreme materials</span>
-                  </label>
-
-                  <div class="radio-block">
-                    <div class="radio-title">Printer</div>
-                    <label class="radio-row">
-                      <input type="radio" name="printerFilter" value="any" checked />
-                      <span>Any printer</span>
+                    <label class="checkbox-row">
+                      <input id="filterHideHard" type="checkbox" />
+                      <span>Hide hard/extreme materials</span>
                     </label>
-                    <label class="radio-row">
-                      <input type="radio" name="printerFilter" value="open_only" />
-                      <span>Open-frame only</span>
-                    </label>
-                    <label class="radio-row">
-                      <input type="radio" name="printerFilter" value="enclosed_only" />
-                      <span>Enclosed recommended</span>
-                    </label>
-                  </div>
 
-                  <div class="filters-actions">
-                    <button id="clearFiltersBtn" class="btn-ghost" type="button">Clear filters</button>
+                    <div class="radio-block">
+                      <div class="radio-title">Printer</div>
+                      <label class="radio-row">
+                        <input type="radio" name="printerFilter" value="any" checked />
+                        <span>Any printer</span>
+                      </label>
+                      <label class="radio-row">
+                        <input type="radio" name="printerFilter" value="open_only" />
+                        <span>Open-frame only</span>
+                      </label>
+                      <label class="radio-row">
+                        <input type="radio" name="printerFilter" value="enclosed_only" />
+                        <span>Enclosed recommended</span>
+                      </label>
+                    </div>
+
+                    <div class="filters-actions">
+                      <button id="clearFiltersBtn" class="btn-ghost btn-compact" type="button">Clear filters</button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -237,8 +244,8 @@
           <div class="calc-subtitle">Estimate base cost + markup for a print.</div>
         </div>
         <div class="calc-header-actions">
-          <button id="calcOpenLibraryBtn" class="btn-ghost" type="button">View all filaments</button>
-          <button id="calculatorBackBtn" class="btn-ghost" type="button">Back to wizard</button>
+          <button id="calcOpenLibraryBtn" class="btn-ghost btn-compact" type="button">View all filaments</button>
+          <button id="calculatorBackBtn" class="btn-ghost btn-compact" type="button">Back to wizard</button>
         </div>
       </div>
 
@@ -246,57 +253,24 @@
         <div class="calc-panel">
           <div class="calc-panel-title">Inputs</div>
 
-          <div class="calc-field">
-            <label for="calcFilamentGrams">Filament used (g)</label>
-            <input id="calcFilamentGrams" type="number" step="0.1" />
-          </div>
-
-          <div class="calc-field">
-            <label for="calcSpoolGrams">Spool size (g)</label>
-            <input id="calcSpoolGrams" type="number" step="1" placeholder="1000" />
-          </div>
-
-          <div class="calc-field">
-            <label for="calcSpoolCost">Spool cost ($)</label>
-            <input id="calcSpoolCost" type="number" step="0.01" />
-          </div>
-
-          <div class="calc-field">
-            <label for="calcPowerCostPerHour">Power cost per hour ($)</label>
-            <input id="calcPowerCostPerHour" type="number" step="0.01" placeholder="optional" />
-          </div>
+          <div class="calc-field"><label for="calcFilamentGrams">Filament used (g)</label><input id="calcFilamentGrams" type="number" step="0.1" /></div>
+          <div class="calc-field"><label for="calcSpoolGrams">Spool size (g)</label><input id="calcSpoolGrams" type="number" step="1" placeholder="1000" /></div>
+          <div class="calc-field"><label for="calcSpoolCost">Spool cost ($)</label><input id="calcSpoolCost" type="number" step="0.01" /></div>
+          <div class="calc-field"><label for="calcPowerCostPerHour">Power cost per hour ($)</label><input id="calcPowerCostPerHour" type="number" step="0.01" placeholder="optional" /></div>
 
           <div class="calc-field two-col">
-            <div>
-              <label for="calcPrintHours">Print time (hours)</label>
-              <input id="calcPrintHours" type="number" step="1" />
-            </div>
-            <div>
-              <label for="calcPrintMinutes">Print time (minutes)</label>
-              <input id="calcPrintMinutes" type="number" step="1" />
-            </div>
+            <div><label for="calcPrintHours">Print time (hours)</label><input id="calcPrintHours" type="number" step="1" /></div>
+            <div><label for="calcPrintMinutes">Print time (minutes)</label><input id="calcPrintMinutes" type="number" step="1" /></div>
           </div>
 
-          <div class="calc-field">
-            <label for="calcLaborRate">Labour rate ($/hr)</label>
-            <input id="calcLaborRate" type="number" step="0.01" placeholder="optional" />
-          </div>
+          <div class="calc-field"><label for="calcLaborRate">Labour rate ($/hr)</label><input id="calcLaborRate" type="number" step="0.01" placeholder="optional" /></div>
 
           <div class="calc-field two-col">
-            <div>
-              <label for="calcLaborHours">Labour (hours)</label>
-              <input id="calcLaborHours" type="number" step="1" />
-            </div>
-            <div>
-              <label for="calcLaborMinutes">Labour (minutes)</label>
-              <input id="calcLaborMinutes" type="number" step="1" />
-            </div>
+            <div><label for="calcLaborHours">Labour (hours)</label><input id="calcLaborHours" type="number" step="1" /></div>
+            <div><label for="calcLaborMinutes">Labour (minutes)</label><input id="calcLaborMinutes" type="number" step="1" /></div>
           </div>
 
-          <div class="calc-field">
-            <label for="calcOtherCosts">Other costs ($)</label>
-            <input id="calcOtherCosts" type="number" step="0.01" placeholder="shipping, packaging, etc." />
-          </div>
+          <div class="calc-field"><label for="calcOtherCosts">Other costs ($)</label><input id="calcOtherCosts" type="number" step="0.01" placeholder="shipping, packaging, etc." /></div>
 
           <div class="calc-field">
             <label>Markup: <span id="markupValueLabel">0%</span></label>
@@ -311,9 +285,7 @@
 
         <div class="calc-panel">
           <div class="calc-panel-title">Summary</div>
-          <div id="calcSummary" class="calc-summary">
-            Enter values above and hit <b>Calculate</b>.
-          </div>
+          <div id="calcSummary" class="calc-summary">Enter values above and hit <b>Calculate</b>.</div>
         </div>
       </div>
     </section>
@@ -327,9 +299,9 @@
     <div id="toastText" class="toast-text"></div>
   </div>
 
-  <!-- JS (absolute paths; required for /tools/ rewrite URLs) -->
-  <script src="/filaments.js"></script>
-  <script src="/logic.js"></script>
-  <script src="/wiring.js"></script>
+  <!-- IMPORTANT: defer makes load/execution consistent -->
+  <script src="/filaments.js" defer></script>
+  <script src="/logic.js" defer></script>
+  <script src="/wiring.js" defer></script>
 </body>
 </html>
